--- a/Website_1/index.html
+++ b/Website_1/index.html
@@ -24,7 +24,8 @@
         <h4>Cofee shop</h4>
         <h4>Leagues</h4>
     </div>
-
+<div id="cursor"></div>
+<div id="cursor-blur"></div>
     <video autoplay loop muted src="./images/hero.mp4"></video>
 
     <div id="main">
@@ -35,8 +36,13 @@
                 South East London. Passionate about technology, player development and
                 making golf fun and accessible to everyone.</p>
         </div>
+        <div id="page2"></div>
     </div>
 
-
+    
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js" integrity="sha512-7Au1ULjlT8PP1Ygs6mDZh9NuQD0A5prSrAUiPHMXpU6g3UMd8qesVnhug5X4RoDr35x5upNpx0A6Sisz1LSTXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollTrigger.min.js" integrity="sha512-LQQDtPAueBcmGXKdOBcMkrhrtqM7xR2bVrnMtYZ8ImAZhFlIb5xrMqQ6uZviyeSB+4mYj89ta8niiCIQM1Gj0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="script.js"></script>
 </body>
+
 </html>
