SIDCUP FAMILY GOLF

--- a/Website_1/index.html
+++ b/Website_1/index.html
@@ -36,7 +36,72 @@
                 South East London. Passionate about technology, player development and
                 making golf fun and accessible to everyone.</p>
         </div>
-        <div id="page2"></div>
+        <div id="page2">
+            <div id="scroller">
+                <div id="scroller-in">
+                    <h4>TOPTRACER RANGE</h4>
+                    <h4>GOLF Lessons</h4>
+                    <h4>Adventure Golf</h4>
+                    <h4>Cofee shop</h4>
+                    <h4>Leagues</h4>
+                </div>
+                <div id="scroller-in">
+                    <h4>TOPTRACER RANGE</h4>
+                    <h4>GOLF Lessons</h4>
+                    <h4>Adventure Golf</h4>
+                    <h4>Cofee shop</h4>
+                    <h4>Leagues</h4>
+                </div>
+            </div>
+        </div>
+
+        <div id="about-us">
+            <img src="./images/card1.avif" alt=""/>
+
+
+            <div id="about-us-in">
+                <h3>ABOUT US</h3>
+                <p> Home to a 46-bay, multi-tier, floodlit driving range, powered by
+                    Toptracer Range technology. Complimented by a practice green and
+                    bunker, coffee shop and American Golf Store. There truly is
+                    something for everyone as we also boast two outdoor 18-hole
+                    dinosaur themed crazy golf courses.</p>
+            </div>
+            <img src="./images/card2.webp" alt=""/>
+        </div>
+
+        <div id="cards-container">
+            <div class="card" id="card1">
+              <div class="overlay">
+                <h4>TopRacer Range</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
+                  quam molestias magni cupiditate architecto et enim quas facere
+                  ipsum tempora?
+                </p>
+              </div>
+            </div>
+            <div class="card" id="card2">
+              <div class="overlay">
+                <h4>Adventure Golf</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
+                  quam molestias magni cupiditate architecto et enim quas facere
+                  ipsum tempora?
+                </p>
+              </div>
+            </div>
+            <div class="card" id="card3">
+              <div class="overlay">
+                <h4>Golf Lessons</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
+                  quam molestias magni cupiditate architecto et enim quas facere
+                  ipsum tempora?
+                </p>
+              </div>
+            </div>
+          </div>
     </div>
 
     
