--- a/website_2/index.html
+++ b/website_2/index.html
@@ -59,5 +59,126 @@
             </div>
         </div>
     </div>
+
+    <!-- course section -->
+    <div id="course">
+        <h1>Our Popular Courses</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+        <div id="course-box">
+
+            <div class="courses">
+                <img src="./images/c1.jpg" alt="">
+                <div class="detail">
+                    <span>Updtaed 21/8/21</span>
+                    <h6>Javascript Beginner Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $49.9
+                </div>
+            </div>
+            <div class="courses">
+                <img src="./images/c2.jpg" alt="">
+                <div class="detail">
+                    <span>Updtaed 21/8/21</span>
+                    <h6>CSS Beginner Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $49.9
+                </div>
+            </div>
+            <div class="courses">
+                <img src="./images/c4.jpg" alt="">
+                <div class="detail">
+                    <span>Updtaed 21/8/21</span>
+                    <h6>Web Design Crash Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $49.9
+                </div>
+            </div>
+            <div class="courses">
+                <img src="./images/c5.jpg" alt="">
+                <div class="detail">
+                    <span>Updtaed 21/8/21</span>
+                    <h6>Web Development Beginner Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $49.9
+                </div>
+            </div>
+            <div class="courses">
+                <img src="./images/c6.jpg" alt="">
+                <div class="detail">
+                    <span>Updtaed 21/8/21</span>
+                    <h6>Angular Beginner Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $49.9
+                </div>
+            </div>
+            <div class="courses">
+                <img src="./images/b.jpg" alt="">
+                <div class="detail">
+                    <span>Updtaed 21/8/21</span>
+                    <h6>Python Beginner Course</h6>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span>(239)</span>
+                    </div>
+                </div>
+                <div class="cost">
+                    $49.9
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
 </body>
 </html>
