--- a/website_2/index.html
+++ b/website_2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TECH EDUCA</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
 </head>
 <body>
@@ -13,13 +14,15 @@
         <img src="./images/logo.svg" alt="">
         <div class="navbar">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Contact</a></li>
+                <i class="fas fa-times" id="menu-close"></i>
+                <li><a href="#" class="active" >Home</a></li>
+                <li><a href="about.html" target="_blank">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="course.html">Courses</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
 
+            <img src="./images/menu.png" alt="" id="menu-btn">
         </div>
     </nav>
 
@@ -309,5 +312,16 @@
         
         </div>
     </footer>
+
+
+
+    <script>
+        $('#menu-btn').click(function(){
+            $('nav .navbar ul').addClass('active')
+        });
+        $('#menu-close').click(function(){
+            $('nav .navbar ul').removeClass('active')
+        });
+    </script>
 </body>
 </html>
