--- a/website_2/contact.html
+++ b/website_2/contact.html
@@ -16,10 +16,10 @@
             <ul>
                 <i class="fas fa-times" id="menu-close"></i>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html"  class="active">About</a></li>
+                <li><a href="about.html" >About</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="course.html">Courses</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="active" >Contact</a></li>
             </ul>
 
             <img src="./images/menu.png" alt="" id="menu-btn">
@@ -28,73 +28,62 @@
 
     <!-- home section -->
     <div id="about-home">
-        <h2>About TechEduca/</h2>  
+        <h2>Contact Us/</h2>  
     </div>
 
-    <div id="about-container">
-        <div class="about-img">
-            <img src="./images/1.png" alt="">
-        </div>
+ <div id="contact">
+    <div class="getin">
+<h2>Get in touch</h2>
+<p>Looking for help? Fill the form and start a new adventure.</p>
 
-        <div class="about-text">
-           <h2>Welcome to TechEduca, Enahance your skills with best online Courses</h2>
-           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia quaerat sed aliquid tempore at aut esse numquam nesciunt ex porro.
-           </p>
-           <div class="about-fe">
-            <img src="./images/fe1.png" alt="">
-            <div class="fe-text">
-                <h5>400+ Courses</h5>
-                <p>You can start and finish one of these popular courses in under site</p>
-            </div>
-           </div>
-           <div class="about-fe">
-            <img src="./images/fe2.png" alt="">
-            <div class="fe-text">
-                <h5>Lifetime Access</h5>
-                <p>You can start and finish one of these popular courses in under site</p>
-            </div>
-           </div>
+<div class="getin-details">
+    <h3>Headquarter</h3>
+    <div>
+        <i class="fa fa-home get"></i>
+        <p>744 New York Ave,Brooklyn, Kings, New York 10224</p>
+    </div>
+    <h3>Phone</h3>
+    <div>
+        <i class="fa fa-phone get"></i>
+        <p>(+642) 245 356 432 <br>(+420) 336 476 328</p>
+    </div>
+    <h3>Headquarters</h3>
+    <div>
+        <i class="fa fa-envelope get" ></i>
+        <p>abc@gamil.com <br> help@gamil.com</p>
+    </div>
+    <h3>Follow Us</h3>
+    <div class="pro-links">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-behance"></i>
+     </div>
+</div>
+    </div>
+    <div class="form">
+        <h4>Let's Connect</h4>
+        <p>Lorem ipsum dolor, sit adipisicing elit. Consequuntur, distinctio?</p>
+        <div class="form-row">
+            <input type="text" placeholder="Enter Your Name"  required>
+            <input type="text" placeholder="Email" required>
+
+        </div>
+        <div class="form-col">
+            <input type="text" placeholder="Subject">
+        </div>
+        <div class="form-col">
+            <textarea name="" id="" cols="30" rows="8" placeholder="How can we help?"></textarea>
+        </div>
+        <div class="form-col">
+            <button>Send Message</button>
         </div>
     </div>
+ </div>
 
-    <!-- feature section -->
-    <div id="features">
-        <h1>Awesome Features</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </p>
-        <div id="card">
-            <div class="card1">
-                <i class="fas fa-graduation-cap"></i>
-                <h3>Scholarship Facility</h3>
-                <p>One make creepath, man bearing theira firament won't great heaven</p>
-            </div>
-            <div class="card1">
-                <i class="fa fa-file"></i>
-                <h3>Dell Online Course</h3>
-                <p>One make creepath, man bearing theira firament won't great heaven</p>
-            </div>
-            <div class="card1">
-                <i class="fas fa-award"></i>
-                <h3>Global certification</h3>
-                <p>One make creepath, man bearing theira firament won't great heaven</p>
-            </div>
-        </div>
-    </div>
-
-    <div id="trust">
-        <h1>Trusted By</h1>
-        <p>Repelnish  man have thing gathering lights yieldings shall you</p>
-        <div class="trust-img">
-            <img src="./images/trust (1).png" alt="">
-            <img src="./images/trust (2).png" alt="">
-            <img src="./images/trust (3).png" alt="">
-            <img src="./images/trust (4).png" alt="">
-            <img src="./images/trust (5).png" alt="">
-            <img src="./images/trust (6).png" alt="">
-        </div>
-    </div>
+ <section id="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52918450.40025156!2d-161.85240697328845!3d35.949761324666035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sin!4v1703531117100!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+ </section>
 
     <footer>
         <div class="footer-col">
