--- a/website_2/course-inner.html
+++ b/website_2/course-inner.html
@@ -15,10 +15,10 @@
         <div class="navbar">
             <ul>
                 <i class="fas fa-times" id="menu-close"></i>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" >About</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="course.html"  class="active" target="_blank">Courses</a></li>
+                <li><a href="course.html"  class="active">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
 
@@ -81,6 +81,20 @@
 
     <p><i class="far fa-check-circle"></i>Javascript from scratch - begineer to advance</p>
 </div>
+        </div>
+        <div class="enroll">
+            <h3>This course includes:</h3>
+            <p><i class="fa fa-play"></i>52 hours video</p>
+            <p><i class="far fa-newspaper"></i>75 articles</p>
+            <p><i class="fa fa-download"></i>Downloadable resources</p>
+            <p><i class="fa fa-universal-access"></i>Full lifetime access</p>
+            <p><i class="fa fa-mobile"></i>Accesss on mobile and TV</p>
+            <p><i class="fa fa-paperclip"></i>Assignment</p>
+            <p><i class="fa fa-trophy"></i>Certifcate of completion</p>
+
+            <div class="enroll-btn">
+                <a href="#" class="blue">Enroll Course</a>
+            </div>
         </div>
     </section>
 
