--- a/website_2/blog.html
+++ b/website_2/blog.html
@@ -15,9 +15,9 @@
         <div class="navbar">
             <ul>
                 <i class="fas fa-times" id="menu-close"></i>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="blog.html" class="active" target="_blank">Blog</a></li>
+                <li><a href="blog.html" class="active" >Blog</a></li>
                 <li><a href="course.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
