--- a/website_2/course.html
+++ b/website_2/course.html
@@ -15,10 +15,10 @@
         <div class="navbar">
             <ul>
                 <i class="fas fa-times" id="menu-close"></i>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" >About</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="course.html"  class="active" target="_blank">Courses</a></li>
+                <li><a href="course.html"  class="active" >Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
 
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="courses" onclick="window.location.href='course-inner.html';">
-                    <img src="./images/5.jpg" alt="">
+                    <img src="./images/6.jpg" alt="">
                     <div class="detail">
                         <span>Updtaed 21/8/21</span>
                         <h6>Python Beginner Course</h6>
