--- a/website_2/index.html
+++ b/website_2/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+    <link rel="icon" type="image/x-icon" href="./images/icons8-aclc-college-gradient-70.png">
 </head>
 <body>
     <!-- naviagtion  -->
@@ -15,8 +16,8 @@
         <div class="navbar">
             <ul>
                 <i class="fas fa-times" id="menu-close"></i>
-                <li><a href="#" class="active" >Home</a></li>
-                <li><a href="about.html" target="_blank">About</a></li>
+                <li><a href="index.html" class="active" >Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="course.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
