--- a/Website_3/test2.html
+++ b/Website_3/test2.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   <link rel="stylesheet" href="test2.css">
-    <link rel="stylesheet" href="test.css">
 </head>
 <body>
-    <div id="hero1">
-        
-    </div>
-    <div id="hero2">
-
-    </div>
+    <img data-name="abhishek" data-company="sheriyans" src="https://media.tacdn.com/media/attractions-splice-spp-674x446/09/c3/33/97.jpg" alt="">
 </body>
+<script src="test2.js"></script>
 </html>
