--- a/Website_3/index.html
+++ b/Website_3/index.html
@@ -119,11 +119,25 @@
                 </div>
                </div>
               </div>
+<div id="page4">
+    <div id="left">
+        <h2>Design</h2>
+        <h2>Project</h2>
+        <h2>Execution</h2>
+        <p>
+            Our team works with our clients to refine an idea <br> and concept into an executable design. We create <br> a final design that encompasses the brand <br> narrative to bring stories to life and provide end-to-end <br> design solutions from concept, design, and <br> architectural drawings to 3D renderings.
+        </p>
+
+    </div>
+    <div id="right">
+        <img src="./images/iamg2.webp" alt="">
+    </div>
+</div>
 
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
 </html>
