--- a/Website_3/index.html
+++ b/Website_3/index.html
@@ -121,6 +121,13 @@
               </div>
 <div id="page4">
     <div id="left">
+
+        <div class="verticle">
+            <div class="verticle1"></div>
+            <div class="verticle2"></div>
+            <div class="verticle3"></div>
+        </div>
+
         <h2>Design</h2>
         <h2>Project</h2>
         <h2>Execution</h2>
@@ -129,7 +136,7 @@
         </p>
 
     </div>
-    <div id="right">
+    <div id="right1">
         <img src="./images/iamg2.webp" alt="">
     </div>
 </div>
@@ -139,5 +146,5 @@
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<!-- <script src="script.js"></script> -->
+<script src="script.js"></script>
 </html>
