Sundown Website Clone

--- a/Website_3/index.html
+++ b/Website_3/index.html
@@ -8,7 +8,9 @@
     <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/sun-png-removebg-preview.png" type="image/x-icon">
 </head>
 </head>
 <body>
@@ -142,6 +144,11 @@
         <img src="./images/iamg2.webp" alt="">
     </div>
 </div>
+</div>
+<div class="cir">
+    <div class="cir1"></div>
+    <h1>
+        WHO WE WORK WITH</h1>
 </div>
 <div class="page5">
     <div class="swiper mySwiper">
@@ -315,7 +322,7 @@
         <div id="footer-bottom">
             <div class="footer-btm2">
                 <h3>copyright &copy; Sundwon Studio</h3>
-               <h3>Brooklyn, NY</h3>
+               <h3><i class="fa-solid fa-globe"></i>Brooklyn, NY</h3>
                 <h3>Instagram</h3>
                 <h3>LinkedIn</h3>
             </div>
