Cynthia Ugwu Clone

--- a/Website_4/index.html
+++ b/Website_4/index.html
@@ -39,6 +39,56 @@
                 </div>
             </div>
         </section>
+
+        <section id="hero2">
+            <div id="elem">
+                <img src="./images/3.png" alt="">
+                <h1>the plug</h1>
+                <h5>2022</h5>
+            </div>
+            <div id="elem">
+                <img src="./images/2.png" alt="">
+                <h1>ixperience</h1>
+                <h5>2022</h5>
+            </div>
+            <div id="elem">
+                <img src="./images/1.png" alt="">
+                <h1>hudu</h1>
+                <h5>2022</h5>
+            </div>
+            <div class="lastelem">
+
+            </div>
+        </section>
+
+        <section id="about">
+            <div class="elepart">
+                <img src="./images/cynthia.png" alt="">
+                <div class="subetxt">
+                <h4>(ABOUT Me)</h4>
+                <p>I'm a product designer with a passion for creating products that not only look good but also solve real problems. When I'm not sketching ideas on paper, you can find me binge-watching a Netflix series or playing video games. My design philosophy is simple: make it visually appealing, functional, and bring a smile to people's faces. I'm the designer you want on your team if you want to make people say 'I need that in my life!'.</p>
+                <a href="#">Let's talk</a>
+            </div>
+            </div>
+        </section>
+
+        <section id="subscribe">
+            <h5>(forget to mention)</h5>
+            <h3>Subscribe to my youtube channel<i class="ri-arrow-right-up-line"></i></h3>
+        </section>
+
+        <section id="footer">
+            <div class="footerleft">
+                <h4>2024 &copy;</h4>
+                <h4>3:21PM EST</h4>
+            </div>
+            <div class="footerright">
+                <a href="#">DRIBBBLE</a>
+                <a href="#">INSTAGRAM</a>
+                <a href="#">LINKEDIN</a>
+                <a href="#">TWITTER</a>
+            </div>
+        </section>
     </div>
 </body>
 <script src="script.js"></script>
