--- a/Website_4/index.html
+++ b/Website_4/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cynthia Ugwu • Product Designer</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="locomtive.css">
     <link rel="stylesheet" href="style.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet"/>
 </head>
 <body>
+    <div id="mini-circle">
+        
+    </div>
     <div id="main">
         <section id="hero">
             <div id="nav">
@@ -18,15 +22,28 @@
             </div>
 
             <div id="headings">
-                <h1>PRODUCT</h1>
+                <div class="loading">
+
+                    <h1 class="subloading">PRODUCT</h1>
+                </div>
                 <div class="subtext">
-                <h1>DESIGNER</h1>
-               <p>BASED IN TORONTO</p>
+                    <div class="loading">
+                        <h1 class="subloading">DESIGNER</h1>
+                    </div>
+                    <div class="loading">
+                        <p class="subloading">BASED IN TORONTO</p>
+                    </div>
+              
                 </div>
 
                 <div class="subheading">
-               <p>AVAILABLE FOR FREELANCE</p>
-               <p>WORK FROM MAY 23'</p>
+                    <div class="loading">                    
+                        <p class="subloading">AVAILABLE FOR FREELANCE</p>
+                        </div>
+                        <div class="loading">
+                        <p class="subloading">WORK FROM MAY 23'</p>
+                    </div>
+                    </div>
                 </div>
             </div>
 
@@ -56,9 +73,9 @@
                 <h1>hudu</h1>
                 <h5>2022</h5>
             </div>
-            <div class="lastelem">
+            <div class="lastelem"> 
 
-            </div>
+         </div>
         </section>
 
         <section id="about">
@@ -91,5 +108,7 @@
         </section>
     </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
 <script src="script.js"></script>
 </html>
