--- a/Website_3/index.html
+++ b/Website_3/index.html
@@ -14,7 +14,13 @@
 </head>
 </head>
 <body>
+    <div id="loader">
+        <h1>ENVIRONMENTS</h1>
+        <h1>EXPERIENCES</h1>
+        <h1>CONTENT</h1>
+    </div>
     <div id="fixed-image"></div>
+
     <div id="main">
      
             <div id="page1">
@@ -24,8 +30,8 @@
                         <h4><a href="#">Work</a></h4>
                         <h4><a href="#">Studio</a></h4>
                         <h4><a href="#">Contact</a></h4>
-
                     </div>
+                    <h3>Menu</h3>
                 </div>
 
                 <div id="center">
@@ -296,6 +302,10 @@
 
 <div class="page6">
 
+</div>
+
+<div id="full-scr">
+    <div class="full-part-1"></div>
 </div>
     </div>
 
