--- a/Website_3/index.html
+++ b/Website_3/index.html
@@ -305,7 +305,13 @@
 </div>
 
 <div id="full-scr">
-    <div class="full-part-1"></div>
+    <div class="full-part-1">
+        <div class="text-scr">
+            <h1 class="scrt">Home</h1>
+            <h1 scrt>about</h1>
+            <h1 scrt>contact</h1>
+        </div>
+    </div>
 </div>
     </div>
 
